--- a/bundle/bundle.html
+++ b/bundle/bundle.html
@@ -4,24 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P2P_Game</title>
+    <title>Pusher</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://kit.fontawesome.com/a26f6e4ee4.js"></script>
 
-    <link rel="stylesheet" href="powerUp.css">
-    <link rel="stylesheet" href="map.css">
-    <link rel="stylesheet" href="players.css">
-    <link rel="stylesheet" href="menu.css">
-    <link rel="stylesheet" href="mob.css">
+    <style>
 
-    <script src="powerUps.js"></script>
-    <script src="menu.js"></script>
-    <script src="settings.js"></script>
-    <script src="gameLoop.js"></script>
-    <script src="mobs.js"></script>
-    <script src="sounds.js"></script>
-    <script src="inits.js"></script>
+    </style>
+
+    <script>
+        
+    </script>
 
 </head>
 <body>
@@ -47,12 +41,6 @@
                 <li>
                     <span class="liText">Wins: </span><span class="indicator wins">0</span>
                 </li>
-                <li>
-                    <span class="liText">Deaths: </span><span class="indicator deaths">0</span>
-                </li>
-                <li>
-                    <span class="liText">Level: </span><span class="indicator level">1</span>
-                </li>
             </ul>
         </div>
         <div class="statWrapper playerTwoStatWrapper">
@@ -76,12 +64,6 @@
                 <li>
                     <span class="liText">Wins: </span><span class="indicator wins">0</span>
                 </li>
-                <li>
-                    <span class="liText">Deaths: </span><span class="indicator deaths">0</span>
-                </li>
-                <li>
-                    <span class="liText">Level: </span><span class="indicator level">1</span>
-                </li>
             </ul>
         </div>
     </div>
@@ -102,12 +84,10 @@
 
     </div>
     <section class="map">
-        <div startPos="left:500px;top:350px" style="left:500px;top:350px;" name="Player One" id="playerOne" class="player playerOne">
-            <div class="name">Player One</div>
+        <div startPos="left:250px;top:350px" style="left:250px;top:350px;" name="Player One" id="playerOne" class="player playerOne">
             <div class="hpBar"></div>
         </div>
-        <div startPos="left:250px;top:350px" style="left:250px;top:350px;" name="Player Two" id="playerTwo" class="player playerTwo">
-            <div class="name">Player Two</div>
+        <div startPos="left:500px;top:350px" style="left:500px;top:350px;" name="Player Two" id="playerTwo" class="player playerTwo">
             <div class="hpBar"></div>
         </div>
     </section>
